Fixed vertical alignment of the header

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 80px;
 }
 
